--- a/css/styles.css
+++ b/css/styles.css
@@ -10962,7 +10962,7 @@ header.masthead .masthead-subheading {
 }
 header.masthead .masthead-heading {
   font-size: 3.25rem;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 3.25rem;
   margin-bottom: 2rem;
   font-family: "Source Sans Pro", sans-serif;
@@ -10975,7 +10975,7 @@ header.masthead .masthead-heading {
   }
   header.masthead .masthead-subheading {
     font-size: 2.25rem;
-    font-style: italic;
+    font-style: normal;
     line-height: 2.25rem;
     margin-bottom: 2rem;
   }
