--- a/css/styles.css
+++ b/css/styles.css
@@ -10961,8 +10961,8 @@ header.masthead .masthead-subheading {
   font-family: "Source Sans Pro", sans-serif;
 }
 header.masthead .masthead-heading {
-  font-size: 3.25rem;
-  font-weight: 700;
+  font-size: 5.25rem;
+  font-weight: bold;
   line-height: 3.25rem;
   margin-bottom: 2rem;
   font-family: "Source Sans Pro", sans-serif;
