--- a/css/styles.css
+++ b/css/styles.css
@@ -10980,8 +10980,8 @@ header.masthead .masthead-heading {
     margin-bottom: 2rem;
   }
   header.masthead .masthead-heading {
-    font-size: 4.5rem;
-    font-weight: 700;
+    font-size: 7.5rem;
+    font-weight: bold;
     line-height: 4.5rem;
     margin-bottom: 4rem;
   }
