--- a/css/styles.css
+++ b/css/styles.css
@@ -10878,7 +10878,7 @@ p {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #212529;
+  background-color: #EF402C;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
@@ -10926,7 +10926,7 @@ p {
   #mainNav.navbar-shrink {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color: #212529;
+    background-color: #EF402C;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
