--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
   --bs-link-color: #ffc800;
-  --bs-link-hover-color: #cca000;
+  --bs-link-hover-color: #9A8B7D;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff4cc;
 }
@@ -6699,7 +6699,7 @@ textarea.form-control-lg {
   color: #ffc800 !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #cca000 !important;
+  color: #9A8B7D !important;
 }
 
 .link-secondary {
@@ -6727,7 +6727,7 @@ textarea.form-control-lg {
   color: #ffc800 !important;
 }
 .link-warning:hover, .link-warning:focus {
-  color: #cca000 !important;
+  color: #9A8B7D !important;
 }
 
 .link-danger {
