--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
   --bs-pink: #d63384;
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
-  --bs-yellow: #9A8B7D;
+  --bs-yellow: #231F20;
   --bs-green: #198754;
   --bs-teal: #20c997;
   --bs-cyan: #0dcaf0;
@@ -34,7 +34,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #9A8B7D;
+  --bs-primary: #231F20;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -73,7 +73,7 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #9A8B7D;
+  --bs-link-color: #231F20;
   --bs-link-hover-color: #9A8B7D;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff4cc;
