--- a/css/styles.css
+++ b/css/styles.css
@@ -10890,7 +10890,7 @@ p {
 #mainNav .navbar-brand {
   color: #231F20;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
+  font-weight: bold;
   letter-spacing: 0.0625em;
   text-transform: uppercase;
 }
