--- a/css/styles.css
+++ b/css/styles.css
@@ -3712,6 +3712,7 @@ textarea.form-control-lg {
   flex-basis: 0;
   flex-grow: 1;
   text-align: center;
+  font-weight: bold;
 }
 
 .nav-fill .nav-item .nav-link,
