--- a/css/styles.css
+++ b/css/styles.css
@@ -3705,6 +3705,7 @@ textarea.form-control-lg {
 .nav-fill .nav-item {
   flex: 1 1 auto;
   text-align: center;
+  font-weight: bold;
 }
 
 .nav-justified > .nav-link,
@@ -10903,6 +10904,7 @@ p {
   font-size: 0.95rem;
   color: #fff;
   letter-spacing: 0.0625em;
+  font-weight: bold;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
   color: #231F20;
