--- a/css/styles.css
+++ b/css/styles.css
@@ -10903,7 +10903,7 @@ p {
   font-size: 0.95rem;
   color: #fff;
   letter-spacing: 0.0625em;
-  font-weight: bold;
+  font-weight: 500;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
   color: #231F20;
