--- a/css/styles.css
+++ b/css/styles.css
@@ -2846,19 +2846,19 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #9A8B7D;
-  --bs-btn-border-color: #9A8B7D;
+  --bs-btn-bg: #EF402C;
+  --bs-btn-border-color: #EF402C;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #d9aa00;
-  --bs-btn-hover-border-color: #9A8B7D;
+  --bs-btn-hover-border-color: #EF402C;
   --bs-btn-focus-shadow-rgb: 255, 208, 38;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #9A8B7D;
+  --bs-btn-active-bg: #EF402C;
   --bs-btn-active-border-color: #bf9600;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #9A8B7D;
-  --bs-btn-disabled-border-color: #9A8B7D;
+  --bs-btn-disabled-bg: #EF402C;
+  --bs-btn-disabled-border-color: #EF402C;
 }
 
 .btn-secondary {
