--- a/css/styles.css
+++ b/css/styles.css
@@ -10844,10 +10844,20 @@ p {
   }
 }
 .btn-xl {
-  padding: 1.25rem 2.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1.125rem;
-  font-weight: 700;
+  margin-top: 1.5rem;
+  display: inline-block;
+  background-color: white;
+  color: #EF402C;
+  padding: 0.75rem 1.5rem;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 8px;
+  transition: background 0.3s ease;
+}
+
+.btn-xl:hover {
+  background-color: #ef402c;
+  color: white;
 }
 
 .btn-social {
@@ -10932,10 +10942,14 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
   background-image: url("../assets/img/header-bg.jpg");
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
+  /*background-repeat: no-repeat;*/
+  /*background-attachment: scroll;*/
+  background-position: center;
   background-size: cover;
 }
 header.masthead .masthead-subheading {
