--- a/css/styles.css
+++ b/css/styles.css
@@ -10823,7 +10823,11 @@ p {
 }
 
 .page-section {
-  padding: 6rem 0;
+  /*padding: 6rem 0;*/
+  background-color: white; /* o gris claro */
+  padding: 5rem 2rem;
+  min-height: 100vh; /* importante para tapar visualmente el hero */
+  z-index: 1;
 }
 .page-section h2.section-heading, .page-section .section-heading.h2 {
   font-size: 2.5rem;
@@ -10861,9 +10865,6 @@ p {
   font-size: 1.55rem;
   /*border-radius: 6px;*/
   text-decoration: none;
-  background: none;
-  border: none;
-  cursor: pointer;
   /*transition: background 0.3s ease;*/
 }
 
@@ -10964,17 +10965,18 @@ header.masthead {
 
 .masthead-overlay {
   /*background-color: rgba(0, 0, 0, 0.4); /* Oscurece la imagen ligeramente */
-  flex: 1;
+  padding: 2rem;
+  flex-grow: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
 }
 
 .masthead-overlay,
 .barra-roja {
-  transition: opacity 0.5s ease, transform 0.5s ease;
-  will-change: opacity, transform;
+  background-color: #EF402C;
+  padding: 1rem;
+  text-align: center;
 }
 
 .masthead-scrolled .masthead-overlay {
