--- a/css/styles.css
+++ b/css/styles.css
@@ -10811,7 +10811,8 @@ textarea.form-control-lg {
   }
 }
 html {
-  scroll-padding-top: 4.5rem;
+  /*scroll-padding-top: 4.5rem;*/
+  scroll-behavior: smooth;
 }
 
 body {
